--- a/static/chat.css
+++ b/static/chat.css
@@ -1,13 +1,17 @@
+h1 {
+    font-family: 'Inter', sans-serif;
+}
+
 html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Inter', sans-serif;
     background-color: #838383; /* Set the background color of the whole site */
     color: white; /* Set the text color to white */
 }
 
-.container {
+.chat-container {
     position: relative;
     width: 80%; /* Take up 80% of the available width */
     margin: 0 auto; /* Center the container */
@@ -151,4 +155,45 @@ h1 {
 
 .option-btn:hover {
     background-color: #1A85FF; /* Light cyan on hover */
+}
+
+#username-container {
+    position: flex;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* semi-transparent black background */
+    display: flex;
+    justify-content: center; /* center horizontally */
+    align-items: center; /* center vertically */
+    z-index: 9999; /* ensure it's above other content */
+}
+
+#username-container label {
+    font-size: 36px;
+    text-align: center;
+}
+
+#username-form {
+    background-color: black; /* white background for the form */
+    padding: 20px;
+    border-radius: 10px; /* rounded corners */
+}
+
+.centered {
+    text-align: center; /* center text */
+}
+
+#username {
+    width: 100%; /* expand text box width */
+    font-size: 30px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+input[type="submit"] {
+    width: 75%;
+    font-size: 24px;
+    text-align: center;
 }
