--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,15 @@
                     <!-- Chatbot responses and user messages will be displayed here -->
                 </ul>
             </div>
+
+            <div id="thinking-animation" style="display: none;">
+                <div class="thought-bubble">
+                    <div class="dot dot1"></div>
+                    <div class="dot dot2"></div>
+                    <div class="dot dot3"></div>
+                </div>
+            </div>
+
             <form id="chat-form">
                 <div class="input-box">
                     <input type="text" id="user-input" name="user_input" disabled>
